--- a/tools/win32/hsed3f/Poppad.rc
+++ b/tools/win32/hsed3f/Poppad.rc
@@ -255,8 +255,8 @@ FONT 9, "ＭＳ Ｐゴシック", 0, 0, 0x0
 BEGIN
     CTEXT           "HSP script editor",IDC_STATIC,41,12,67,8
     ICON            "OniPad",IDC_STATIC,8,8,20,20
-    CTEXT           "For Windows version 3.1",IDC_STATIC,47,19,76,8
-    CTEXT           "Copyright 1997-2007 onion software",IDC_STATIC,0,37,159,
+    CTEXT           "For Windows version 3.2",IDC_STATIC,47,19,76,8
+    CTEXT           "Copyright 1997-2008 onion software",IDC_STATIC,0,37,159,
                     8
     DEFPUSHBUTTON   "OK",IDOK,49,101,57,14,WS_GROUP
     CTEXT           "http://hsp.tv/",IDC_STATICLINK,34,85,90,8,SS_NOTIFY
@@ -275,15 +275,15 @@ BEGIN
     DEFPUSHBUTTON   "Cancel",IDCANCEL,34,50,32,14,WS_GROUP
 END
 
-JUMPBOX DIALOG  0, 0, 130, 38
+JUMPBOX DIALOG  0, 0, 130, 42
 STYLE DS_SETFONT | WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION "カーソル移動"
-FONT 10, "system"
+FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
-    PUSHBUTTON      "OK",IDOK,73,4,46,11,NOT WS_TABSTOP
-    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,73,20,46,11,NOT WS_TABSTOP
-    EDITTEXT        IDC_EDIT1,6,5,61,12,ES_AUTOHSCROLL
-    CTEXT           "移動先の行番号",-1,6,20,66,13
+    PUSHBUTTON      "OK",IDOK,76,6,46,14,NOT WS_TABSTOP
+    PUSHBUTTON      "キャンセル",IDCANCEL,76,22,46,14,NOT WS_TABSTOP
+    EDITTEXT        IDC_EDIT1,6,7,61,12,ES_AUTOHSCROLL|ES_RIGHT
+    CTEXT           "移動先の行番号",-1,6,24,66,13
 END
 
 CMDBOX DIALOG  0, 0, 185, 77
@@ -292,7 +292,7 @@ CAPTION "HSP起動オプション指定"
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
     PUSHBUTTON      "OK",IDOK,73,56,50,14,NOT WS_TABSTOP
-    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,128,56,50,14,NOT WS_TABSTOP
+    PUSHBUTTON      "キャンセル",IDCANCEL,128,56,50,14,NOT WS_TABSTOP
     EDITTEXT        IDC_EDIT1,7,19,171,13,ES_AUTOHSCROLL
     LTEXT           "コマンドラインに追加される文字列を入力してください",
                     IDC_STATIC,7,39,171,8
@@ -305,7 +305,7 @@ CAPTION "実行可能ファイル作成"
 FONT 9, "ＭＳ Ｐゴシック", 0, 0, 0x0
 BEGIN
     PUSHBUTTON      "OK",IDOK,72,129,50,14,NOT WS_TABSTOP
-    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,130,129,50,14,NOT WS_TABSTOP
+    PUSHBUTTON      "キャンセル",IDCANCEL,130,129,50,14,NOT WS_TABSTOP
     EDITTEXT        IDC_EDIT1,7,7,164,14,ES_AUTOHSCROLL
     LTEXT           "作成するファイル名を入力してください ( 拡張子なし )",
                     IDC_STATIC,7,27,173,12
@@ -328,7 +328,7 @@ CAPTION "外部ファイル実行"
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
     PUSHBUTTON      "OK",IDOK,73,58,50,14,NOT WS_TABSTOP
-    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,130,58,50,14,NOT WS_TABSTOP
+    PUSHBUTTON      "キャンセル",IDCANCEL,130,58,50,14,NOT WS_TABSTOP
     EDITTEXT        IDC_EDIT1,7,7,145,14,ES_AUTOHSCROLL
     LTEXT           "コンパイル+実行するファイル名を入力してください。",
                     IDC_STATIC,7,25,173,12
@@ -362,8 +362,8 @@ BEGIN
     PUSHBUTTON      "削除 ->",IDCM_DEL,138,71,50,14
     PUSHBUTTON      "全追加 >>",IDCM_ALLSEL,137,123,50,14
     PUSHBUTTON      "全削除 ->",IDCM_CLR,137,143,50,14
-    LTEXT           "ｶﾚﾝﾄﾃﾞｨﾚｸﾄﾘ",IDC_CDIR,7,7,173,8
-    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,202,204,50,14
+    LTEXT           "カレントディレクトリ",IDC_CDIR,7,7,173,8
+    PUSHBUTTON      "キャンセル",IDCANCEL,202,204,50,14
     EDITTEXT        IDC_EDIT1,138,21,49,13,ES_AUTOHSCROLL
     CONTROL         "暗号化",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,138,93,49,13
@@ -377,7 +377,7 @@ BEGIN
     LISTBOX         IDC_LIST2,7,7,163,215,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     DEFPUSHBUTTON   "移動",IDOK,176,7,50,14
-    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,176,24,50,14,NOT WS_TABSTOP
+    PUSHBUTTON      "キャンセル",IDCANCEL,176,24,50,14,NOT WS_TABSTOP
 END
 
 CONFIG DIALOGEX 0, 0, 361, 240
