--- a/trunk/tools/win32/hsed3_footy2/Poppad.rc
+++ b/trunk/tools/win32/hsed3_footy2/Poppad.rc
@@ -70,7 +70,7 @@ BEGIN
         MENUITEM "先頭行に移動(&T)\tctrl+T",    IDM_LTOP
         MENUITEM "最終行に移動(&B)\tctrl+B",    IDM_LBTM
         MENUITEM "指定行に移動(&J)...\tctrl+J", IDM_JUMP
-        MENUITEM "ラベル一覧(&L)...\tF11",      IDM_LABEL
+        MENUITEM "ラベル・関数一覧(&L)...\tF11", IDM_LABEL
     END
     POPUP "検索(&S)"
     BEGIN
@@ -371,11 +371,14 @@ END
 
 LABELBOX DIALOG  0, 0, 233, 235
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "ラベル一覧"
+CAPTION "ラベル・関数一覧"
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
     LISTBOX         IDC_LIST2,7,7,163,215,LBS_USETABSTOPS | 
-                    LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+                    LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP | NOT WS_VISIBLE
+    CONTROL         "",IDC_LIST1,"SysListView32",WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT |
+                    LVS_SHOWSELALWAYS | LVS_NOCOLUMNHEADER | LVS_SINGLESEL | LVS_REPORT,
+                    7,7,163,215
     DEFPUSHBUTTON   "移動",IDOK,176,7,50,14
     PUSHBUTTON      "キャンセル",IDCANCEL,176,24,50,14,NOT WS_TABSTOP
 END
