--- a/trunk/tools/win32/hsed3_footy2/Poppad.rc
+++ b/trunk/tools/win32/hsed3_footy2/Poppad.rc
@@ -129,7 +129,7 @@ BEGIN
     POPUP "ヘルプ(&H)"
     BEGIN
         MENUITEM "HSPキーワード検索(&K)...\tF1", IDM_KWHELP
-        MENUITEM "HSPプログラムガイドを開く(&P)...", IDM_HSPMAN1
+        MENUITEM "HSPプログラミング・マニュアルを開く(&P)...",  IDM_HSPMAN1
         MENUITEM "HSP命令リファレンスを開く(&R)...", IDM_HSPMAN2
         MENUITEM "HSPマニュアル目次(&I)...",    IDM_HSPMAN3
         MENUITEM "バージョン情報(&A)...",       IDM_ABOUT
@@ -256,12 +256,12 @@ BEGIN
     CTEXT           "HSP script editor",IDC_STATIC,41,12,67,8
     ICON            "OniPad",IDC_STATIC,8,8,20,20
     CTEXT           "For Windows version 3.2",IDC_STATIC,47,19,76,8
-    CTEXT           "Copyright 1997-2008 onion software",IDC_STATIC,0,37,159,
+    CTEXT           "Copyright 1997-2009 onion software",IDC_STATIC,0,37,159,
                     8
     DEFPUSHBUTTON   "OK",IDOK,49,101,57,14,WS_GROUP
     CTEXT           "http://hsp.tv/",IDC_STATICLINK,34,85,90,8,SS_NOTIFY
     LTEXT           "Information available at:",IDC_STATIC,30,77,71,8
-    CTEXT           "Modified by LonelyWolf",IDC_STATIC,0,47,159,8
+    CTEXT           "Modified by OpenHSP PROJECT",IDC_STATIC,0,47,159,8
     CTEXT           "Powered by Footy2 Lib.",IDC_STATIC,0,56,159,8
 END
 
@@ -843,13 +843,13 @@ BEGIN
         BLOCK "041104b0"
         BEGIN
             VALUE "FileDescription", "HSP スクリプトエディタ"
-            VALUE "FileVersion", "3.0"
+            VALUE "FileVersion", "3.2"
             VALUE "InternalName", "スクリプト エディタ"
-            VALUE "LegalCopyright", "Copyright (C) 1997-2005 Onion Software"
+            VALUE "LegalCopyright", "Copyright (C) 1997-2009 Onion Software"
             VALUE "OriginalFilename", "hsed3.exe"
             VALUE "PrivateBuild", "1.05"
             VALUE "ProductName", "Hot Soup Processor"
-            VALUE "ProductVersion", "3.0"
+            VALUE "ProductVersion", "3.2"
         END
     END
     BLOCK "VarFileInfo"
